# trit-computing-machine

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
docs/: CNN_IMPLEMENTATION.md  GITHUB_PAGES_DEPLOYMENT.md  GPT_IMPLEMENTATION.md  IDEAS.md  NEURAL_NETWORKS.md
docs/web-sandbox/: README.md  app.js  index.html  styles.css  ternary-core.js  ternary-nn.js
examples/: README_NEURAL.md  basic_operations.py  cnn_inference_demo.py  evaluate_cnn.py  mnist_ternary.py  multimodal_demo.py  setun_simulation.py  text_generation_demo.py  train_cifar10_cnn.py  train_gpt.py  train_imagenet_cnn.py
python/ternary/: __init__.py  cnn_data.py  cnn_layers.py  cnn_models.py  cnn_trainer.py  encoding.py  gpt_data.py  highlevel.py  lossless_encoding.py  neural.py  tal.py  ternary_gpt.py  ternary_multimodal.py  ternary_transformer.py
src/bindings/: bindings.cpp
src/core/: memory.cpp  memory.hpp  processor.cpp  processor.hpp  trit.cpp  trit.hpp  tryte.cpp  tryte.hpp
src/proto/: ternary.proto
tests/: test_neural_network.py  test_operations.py  test_trit.cpp
